-Added new SVG logos and a preview image

--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,73 @@
 @import 'tailwindcss';
+/* - **Neutral 900**: `hsl(227, 75%, 14%)`
+- **Neutral 800**: `hsl(226, 25%, 17%)`
+- **Neutral 700**: `hsl(225, 23%, 24%)`
+- **Neutral 600**: `hsl(226, 11%, 37%)`
+- **Neutral 300**: `hsl(0, 0%, 78%)`
+- **Neutral 200**: `hsl(217, 61%, 90%)`
+- **Neutral 100**: `hsl(0, 0%, 93%)`
+- **Neutral 0**: `hsl(200, 60%, 99%)`
+
+### Red
+
+- **Red 400**: `hsl(3, 86%, 64%)`
+- **Red 500**: `hsl(3, 71%, 56%)`
+- **Red 700**: `hsl(3, 77%, 44%)`
+
+### Gradient
+
+- **Light Gradient**: `linear-gradient(180deg, #EBF2FC 0%, #EEF8F9 100%)`
+- **Dark Gradient**: `linear-gradient(180deg, #040918 0%, #091540 100%)` */
+
+/* <!-- fonts.google --> */
+* {transition : 300ms}
+
+html {
+	scroll-behavior: smooth;
+}
+
+body {
+	background: linear-gradient(180deg, #040918 0%, #091540 100%);
+	color: whitesmoke;
+	font-family: 'Overpass', sans-serif;
+	font-optical-sizing: auto;
+	font-style: normal;
+}
+
+#app {
+	min-height: 100dvh;
+	width: clamp(1rem, 100%, 80rem);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	/* font-size: 16px; */
+	/* padding: 3rem 1rem; */
+	margin: 0 auto;
+}
+
+h1 {
+	font-size: clamp(1.5rem, 2.5vw, 2rem);
+	line-height: 2.5rem;
+	font-weight: 500;
+}
+
+h2 {
+	font-size: clamp(1.4rem, 2vw, 1.5rem);
+	line-height: 2rem;
+	font-weight: 500;
+}
+
+h3 {
+	font-size: clamp(1rem, 1.8vw, 1.25rem);
+	line-height: 1.75rem;
+	font-weight: 500;
+}
+
+ul {
+	list-style-type: none;
+}
+
+a {
+	text-decoration: none;
+}
